# steel-llama

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.continue/docs/: configparser.yaml  discord.yaml  ollama.yaml  python.yaml  sqlite3.yaml
.continue/prompts/: master-prompt.yaml  simple-code.yaml  use-configparser.yaml  use-latest-tools.yaml  use-sqlite.yaml
.github/workflows/: ci.yml
bot/: __init__.py  bot_commands.py  chat_message.py  chat_model.py  chat_session.py  configuration.py  database.py  llm_response.py  model.py  response.py
tests/: chat_message_tests.py  chat_model_tests.py  configuration_tests.py  llm_response_tests.py
