[project]
name = "steel-llama"
version = "0.1.0"
description = "My Discord bot utilizing ollama"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord>=2.3.2",
    "jinja2>=3.1.6",
    "ollama>=0.5.1",
    "pytest>=8.4.1",
    "transformers>=4.54.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*_tests.py"
python_functions = "test_*"
